Fix dockerfile for builds